syntax = "proto3";

import "messages.proto";

option java_package = "rbento.api.v1.service";
option java_multiple_files = true;

service Terminal {
	rpc executeCommand (CommandRequest) returns (CommandResponse);
}
